<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#5EDDA3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lb_titulo1"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:fontFamily="cursive"
            android:text="@string/titulo"
            android:textColor="#FB0000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="58dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lb_nombre2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nombre" />

                <EditText
                    android:id="@+id/txt_usuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Ingrese su Usuario"
                    android:inputType="text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lb_apellido2"
                    android:layout_width="43dp"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:text="@string/contrasena" />

                <EditText
                    android:id="@+id/txt_contrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Ingrese su Contraseña"
                    android:inputType="textPassword" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_registrar2"
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ingreso" />

        <TextView
            android:id="@+id/txt_registroventana"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Registrar" />
    </LinearLayout>

</RelativeLayout>